fix: bg on mobile

--- a/paralect_test_task/src/App.css
+++ b/paralect_test_task/src/App.css
@@ -87,5 +87,6 @@
     overflow: visible;
     overflow-x: hidden;
     overflow-y: scroll;
+    background-color: #e5e5e5;
   }
 }
