--- a/paralect_test_task/src/index.css
+++ b/paralect_test_task/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media (max-width: 760px) {
+  body {
+    background-color: #e5e5e5;
+  }
+}
